--- a/trunk/templates/reg.html
+++ b/trunk/templates/reg.html
@@ -3,48 +3,86 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
 <link type="text/css" href="css/main.css" rel="stylesheet" />
+<script src="js/jquery-1.3.2.min.js" type="text/javascript"></script>
+<script src="js/formvalidation.js" type="text/javascript"></script>
 </head>
 <div id="header"></div>
 <div id="wrap">
-<form name="myform" method="post" action="reg.php">
-<table class="form">
-<caption>用户注册</caption>
-	<tr align="center">
-		<td align="right" width="40%">用户名：</td>
-		<td align="left"><input name="id" type="text" value="" /></td>
-	</tr>
-	<tr>
-		<td align="right">登陆密码：</td>
-		<td align="left"><input name="pw" type="password" value="" /></td>
-	</tr>
-	<tr>
-		<td align="right">再次输入登陆密码：</td>
-		<td align="left"><input name="pw2" type="password" value="" /></td>
-	</tr>
-	<tr>
-		<td align="right">旺旺账号：</td>
-		<td align="left"><input name="taobao_name" type="text" value="" /></td>
-	</tr>
-	<tr>
-		<td align="right">QQ：</td>
-		<td align="left"><input name="qq" type="text" value="" /></td>
-	</tr>
-		<tr>
-		<td align="right">E-mail：</td>
-		<td align="left"><input name="email" type="text" value="" /></td>
-	</tr>
-		<tr>
-		<td align="right">输入验证码：</td>
-		<td align="left"><input name="yz" type="text" value="" /><img src="yz.php" align="absmiddle" /></td>
-	</tr>
-	
-
-	<tr>
-    <td></td>
-    <td align="left">
-		<input name="tijiao" type="submit" value="提交"  class ="tijiao"/>        </td>
-	</tr>
-</table>
-</form>
+  <form name="myform" method="post" action="reg.php" class="grey">
+    <table class="form">
+      <caption>
+      用户注册
+      </caption>
+      <tr>
+        <td align="right" width="40%"><span style="color: #F00">*</span>用户名：</td>
+        <td align="left"><input name="id" type="text" value="" style="width: 150px"/></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td align="left" style="padding:0px; padding-left:8px; color:#999; font-size:90%">4至20个字符(包括字母、数字、下划线)，且必须以英文字母开始。如example2010</td>
+      </tr>
+      <tr>
+        <td align="right"><span style="color: #F00">*</span>登录密码：</td>
+        <td align="left"><input name="pw" type="password" value="" style="width: 150px"/></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td align="left" style="padding:0px; padding-left:8px; color:#999; font-size:90%">密码长度6～14位，字母区分大小写</td>
+      </tr>
+      <tr>
+        <td align="right"><span style="color: #F00">*</span>确认登录密码：</td>
+        <td align="left"><input name="pw2" type="password" value=""  style="width: 150px"/></td>
+      </tr>
+      <tr>
+        <td align="right">旺旺账号：</td>
+        <td align="left"><input name="taobao_name" type="text" value=""style="width: 150px"/></td>
+      </tr>
+      <tr>
+        <td align="right">QQ：</td>
+        <td align="left"><input name="qq" type="text" value="" style="width: 150px"/></td>
+      </tr>
+      <tr>
+        <td align="right">E-mail：</td>
+        <td align="left"><input name="email" type="text" value=""  style="width: 150px"/></td>
+      </tr>
+      <tr>
+        <td align="right">输入验证码：</td>
+        <td align="left"><input name="yz" type="text" value=""  style="width: 50px"/>
+          <img src="yz.php" align="absmiddle" /></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td align="left"><input name="tijiao" type="submit" value=""
+			class="reg" /></td>
+      </tr>
+    </table>
+  </form>
 </div>
+<script language="javascript">
+$(document).ready(function() {
+	$("form[name='myform'] input[name='taobao_name']").blur(function(){$(this).checkform('taobao',false);});
+	$("form[name='myform'] input[name='qq']").blur(function(){$(this).checkform('qq',false);});
+	$("form[name='myform'] input[name='email']").blur(function(){$(this).checkform('email',false);});
+	$("form[name='myform'] input[name='yz']").blur(function(){$(this).checkform('yz',true);});
+	$("form[name='myform']").submit(function(){
+	if($("form[name='myform'] input[name='id']").checkform('id',true) && 
+	   $("form[name='myform'] input[name='pw']").checkform('pw',true) &&	
+	   //$("form[name='myform'] input[name='pw2']").checkform('pw',true) &&
+	   $("form[name='myform'] input[name='pw2']").checkeq( ($("form[name='myform'] input[name='pw']").val()),( $("form[name='myform'] input[name='pw2']").val()) ) &&
+	   $("form[name='myform'] input[name='yz']").checkform('yz',true)){ 
+		//必填项目填对之后，如果选填项目不对则清空后提交
+		if(!$("form[name='myform'] input[name='taobao_name']").checkform('taobao',false)){$("form[name='myform'] input[name='taobao_name']").val('');}
+		if(!$("form[name='myform'] input[name='qq']").checkform('qq',false)){$("form[name='myform'] input[name='qq']").val('');}
+		if(!$("form[name='myform'] input[name='email']").checkform('email',false)){$("form[name='myform'] input[name='email']").val('');}
+		$("form[name='myform']").submit();
+	}
+	else {
+		$("form[name='myform'] input[name='taobao_name']").checkform('taobao',false);
+		$("form[name='myform'] input[name='qq']").checkform('qq',false);
+		$("form[name='myform'] input[name='email']").checkform('email',false);
+		return false;
+	}
+});
+});
+</script>
 </html>
