--- a/trunk/templates/status.html
+++ b/trunk/templates/status.html
@@ -3,107 +3,131 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
 <link type="text/css" href="css/main.css" rel="stylesheet" />
+<script src="js/jquery-1.3.2.min.js" type="text/javascript"></script>
 </head>
+
 <div id="header"></div>
 <div id="wrap">
-<form name="myform" method="post" action="change_status.php">
-<table class="form">
-	<caption>用户信息</caption>
-	<tr>
-		<td align="right" width="40%">用户名：</td>
-		<td align="left">{$name}</td>
-	</tr>
-	<tr>
-		<td align="right">密码：</td>
-		<td align="left"><input name="pw" type="text" value="{$password}" /></td>
-	</tr>
-	<tr>
-		<td align="right">旺旺账号：</td>
-		<td align="left"><input name="taobao_name" type="text"
+  <form name="myform" method="post" action="change_status.php" class="grey">
+    <table class="form">
+      <caption>
+      用户信息
+      </caption>
+      <tr>
+        <td align="right" width="40%">用户名：</td>
+        <td align="left">{$name}</td>
+      </tr>
+      <tr>
+        <td align="right">密码：</td>
+        <td align="left"><input name="pw" type="text" value="{$password}" /></td>
+      </tr>
+      <tr>
+        <td align="right">旺旺账号：</td>
+        <td align="left"><input name="taobao_name" type="text"
 			value="{$taobao_name}" /></td>
-	</tr>
-	<tr>
-		<td align="right">QQ：</td>
-		<td align="left"><input name="qq" type="text" value="{$qq}" /></td>
-	</tr>
-	<tr>
-		<td align="right">E-mail：</td>
-		<td align="left"><input name="email" type="text" value="{$email}" /></td>
-	</tr>
-	{if $regtime != ''}
-	<tr>
-		<td align="right">注册时间：</td>
-		<td align="left">{$regtime}</td>
-	</tr>
-	{if $testpassword != ''}
-
-	<tr>
-		<td align="right">测试账号：</td>
-		<td align="left">test</td>
-	</tr>
-	<tr>
-		<td align="right">测试密码：</td>
-		<td align="left">{$testpassword}（可能每日一变，登陆可查）</td>
-	</tr>
-	{/if} {/if}
-	<input name="id" type="hidden" value="{$name}" />
-	{if $paytime != ''}
-	<tr>
-		<td align="right">订购时间：</td>
-		<td align="left">{$paytime}</td>
-	</tr>
-	<tr>
-		<td align="right">到期时间：</td>
-		<td align="left">{$overtime}</td>
-	</tr>
-
-	{/if}
-	<tr>
-		<td align="left">可用服务器：</td>
-	</tr>
-	<tr>
-		<td align="right">服务器1：</td>
-		<td align="left">ssh1.fan-qiang.com (洛杉矶，推荐)</td>
-	</tr>
-	<tr>
-		<td align="right">服务器2：</td>
-		<td align="left">ssh2.fan-qiang.com (宾西法尼亚)</td>
-	</tr>
-	<tr>
-		<td align="right">服务器3：</td>
-		<td align="left">ssh3.fan-qiang.com (宾西法尼亚)</td>
-	</tr>
-	<tr>
-		<td align="right">服务器6：</td>
-		<td align="left">ssh6.fan-qiang.com (奥兰多)</td>
-	</tr>
-	<tr>
-		<td></td>
-		<td align="left"><input name="tijiao" type="submit" value="修改信息"
-			class="tijiao" /></td>
-	</tr>
-	<!--tr>
+      </tr>
+      <tr>
+        <td align="right">QQ：</td>
+        <td align="left"><input name="qq" type="text" value="{$qq}" /></td>
+      </tr>
+      <tr>
+        <td align="right">E-mail：</td>
+        <td align="left"><input name="email" type="text" value="{$email}" /></td>
+      </tr>
+      {if $regtime != ''}
+      <tr>
+        <td align="right">注册时间：</td>
+        <td align="left">{$regtime}</td>
+      </tr>
+      {if $testpassword != ''}
+      <tr>
+        <td align="right">测试账号：</td>
+        <td align="left">test</td>
+      </tr>
+      <tr>
+        <td align="right">测试密码：</td>
+        <td align="left">{$testpassword}（可能每日一变，登陆可查）</td>
+      </tr>
+      {/if} {/if}
+      <input name="id" type="hidden" value="{$name}" />
+      {if $paytime != ''}
+      <tr>
+        <td align="right">订购时间：</td>
+        <td align="left">{$paytime}</td>
+      </tr>
+      <tr>
+        <td align="right">到期时间：</td>
+        <td align="left">{$overtime}</td>
+      </tr>
+      {/if}
+      <tr>
+        <td align="left" style="font-size:110%">可用服务器：</td>
+      </tr>
+      <tr>
+        <td align="right">服务器1：</td>
+        <td align="left">ssh1.fan-qiang.com (洛杉矶，推荐)</td>
+      </tr>
+      <tr>
+        <td align="right">服务器2：</td>
+        <td align="left">ssh2.fan-qiang.com (宾西法尼亚)</td>
+      </tr>
+      <tr>
+        <td align="right">服务器3：</td>
+        <td align="left">ssh3.fan-qiang.com (宾西法尼亚)</td>
+      </tr>
+      <tr>
+        <td align="right">服务器6：</td>
+        <td align="left">ssh6.fan-qiang.com (奥兰多)</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td align="left"><input name="tijiao" type="submit" value=""
+			class="modify" /></td>
+      </tr>
+      <!--tr>
 		<a href="alipay/enter.php?name={$name}&yue=10">付费</a>
 	</tr-->
-
-</table>
-</form>
-<form name="pay" method="post" action="alipay/enter.php">
-<table class="form">
-	<tr>
-		<td align="right" width="40%">选择付费（续费）时长：</td>
-		<td align="left"><input type="radio" name="paymonth" value="1" />1个月 (4.5￥)<br>
-		<input type="radio" name="paymonth" value="3" />3个月 (13￥)<br><input
-			type="radio" name="paymonth" value="6" />6个月  (25￥)<br><input type="radio"
-			name="paymonth" value="12" />12个月(45￥)</td>
-	</tr>
-	<input name="name" type="hidden" value="{$name}" />
-	<tr>
-		<td></td>
-		<td align="left"><input type="submit" value="付费" class="tijiao" /></td>
-	</tr>
-
-</table>
-</form>
+    </table>
+  </form>
+  <form name="pay" method="post" action="alipay/enter.php" class="grey">
+    <table class="form">
+      <tr>
+        <td align="left" width="40%" style="font-size:110%">选择付费（续费）时长：</td>
+        <td align="left"><input type="radio" name="paymonth" value="1" />
+          1个月 (4.5￥)<br>
+          <input type="radio" name="paymonth" value="3" />
+          3个月 (13￥)<br>
+          <input
+			type="radio" name="paymonth" value="6" />
+          6个月  (25￥)<br>
+          <input type="radio"
+			name="paymonth" value="12" />
+          12个月(45￥)</td>
+      </tr>
+      <input name="name" type="hidden" value="{$name}" />
+      <tr>
+        <td></td>
+        <td align="left"><input type="submit" value="" class="pay" /></td>
+      </tr>
+    </table>
+  </form>
 </div>
+<script language="javascript">
+$(document).ready(function() {
+	$("form[name='pay']").submit(function(){
+		alert($(":radio:checked").val());
+		//return false;
+	if($(":radio:checked").val() == undefined){
+			if(!$(".pay").next().is("span")){
+				$(".pay").after("<span class='errormsg'>请选择一项</span>");
+				return false;
+			}
+	}
+	else{
+		$("form[name='pay']").submit();
+	}
+		
+	});
+});
+</script>
 </html>
