--- a/templates/status.html
+++ b/templates/status.html
@@ -4,6 +4,19 @@
 <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
 <link type="text/css" href="css/main.css" rel="stylesheet" />
 <script src="js/jquery-1.3.2.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-17148399-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 <body>
 <div id="header"></div>
