--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,11 @@
 <script src="js/formvalidation.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 
+
 <title>翻墙 SSH代理 VPN代理 网页代理 高速美国主机代理</title>
 </head>
 <body>
+
 <div id="status_small" style="display:none">xxx 退出</div>
 <div id="status_large" style="display: none"></div>
 <div id="header"><a href="index.php" id="logo"></a>
@@ -242,7 +244,8 @@
         ssh2.fan-qiang.com (宾西法尼亚) <br>
         ssh3.fan-qiang.com (宾西法尼亚) <br>
         ssh6.fan-qiang.com (奥兰多，<font color=red>推荐</font>) <br>
-        您可以使用fan-qiang.com自助购买续费，全部自动发货！ </h3>
+        您可以使用fan-qiang.com自助购买续费，全部自动发货！<br>
+        站长联系方式 旺旺：kecker QQ：58287926 </h3>
       <div id="preFeature2" style="border: 5px solid #666">
         <div><img src="images/twitter.jpg" alt="twitter snapshot" />
           <p>想上twitter看看您喜欢的明星天天在干什么嘛？</p>
@@ -277,8 +280,11 @@
         </form>
       </h3>
     </div>
+    <font color=blue>站长联系方式 <a target="_blank" href="http://amos1.taobao.com/msg.ww?v=2&uid=kecker&s=1" ><img border="0" src="http://amos1.taobao.com/online.ww?v=2&uid=kecker&s=1" alt="点击这里给我发消息" /></a>  QQ：58287926</font>
+    
   </div>
 </div>
+
 <div id="bottom">
   <p>Copyright：fan-qiang.com</p>
 </div>
