--- a/templates/status.html
+++ b/templates/status.html
@@ -80,6 +80,7 @@
         <td align="right">服务器6：</td>
         <td align="left">ssh6.fan-qiang.com (奥兰多)</td>
       </tr>
+
       <tr>
         <td></td>
         <td align="left"><input name="tijiao" type="submit" value=""
@@ -112,6 +113,16 @@
       </tr>
     </table>
   </form>
+  
+              <tr>
+        <td align="right"><font color=blue>站长QQ：</font></td>
+        <td align="left"><font color=blue>58287926</font></td>
+      </tr>
+            <tr>
+        <td align="right"><font color=blue>旺旺：</font></td>
+        <td align="left"><font color=blue><a target="_blank" href="http://amos1.taobao.com/msg.ww?v=2&uid=kecker&s=1" ><img border="0" src="http://amos1.taobao.com/online.ww?v=2&uid=kecker&s=1" alt="点击这里给我发消息" /></a></font></td>
+      </tr>
+      
 </div>
 
 </body>
