--- a/trunk/templates/index.html
+++ b/trunk/templates/index.html
@@ -244,8 +244,7 @@
         ssh2.fan-qiang.com (宾西法尼亚) <br>
         ssh3.fan-qiang.com (宾西法尼亚) <br>
         ssh6.fan-qiang.com (奥兰多，<font color=red>推荐</font>) <br>
-        您可以使用fan-qiang.com自助购买续费，全部自动发货！<br>
-        站长联系方式 旺旺：kecker QQ：58287926 </h3>
+        您可以使用fan-qiang.com自助购买续费，全部自动发货！<br></h3>
       <div id="preFeature2" style="border: 5px solid #666">
         <div><img src="images/twitter.jpg" alt="twitter snapshot" />
           <p>想上twitter看看您喜欢的明星天天在干什么嘛？</p>
