--- a/trunk/templates/help.html
+++ b/trunk/templates/help.html
@@ -62,7 +62,8 @@ src="../images/翻墙教程img/image014.jpg" alt="Proxy Switchy界面"></p>
 
 </div>
 <div id="bottom">
-  <p>Copyright：fan-qiang.com</p>
+  <p>Copyright：fan-qiang.com</p><a href="http://sighttp.qq.com/cgi-bin/check?sigkey=69e7efaa50ae50cc4f85772390c28001936fd4a009858491efce5c05d5303823"; target=_blank; onclick="var tempSrc='http://sighttp.qq.com/wpa.js?rantime='+Math.random()+'&sigkey=69e7efaa50ae50cc4f85772390c28001936fd4a009858491efce5c05d5303823';var oldscript=document.getElementById('testJs');var newscript=document.createElement('script');newscript.setAttribute('type','text/javascript'); newscript.setAttribute('id', 'testJs');newscript.setAttribute('src',tempSrc);if(oldscript == null){document.body.appendChild(newscript);}else{oldscript.parentNode.replaceChild(newscript, oldscript);}return false;"><img border="0" SRC='http://wpa.qq.com/pa?p=1:20784203:41' alt=""></a>
+
 </div>
 </body>
 <script language="javascript">
