--- a/templates/status.html
+++ b/templates/status.html
@@ -40,6 +40,7 @@
         <td align="right">注册时间：</td>
         <td align="left">{$regtime}</td>
       </tr>
+      {if $paytime != ''}
       {if $testpassword != ''}
       <tr>
         <td align="right">测试账号：</td>
@@ -49,7 +50,7 @@
         <td align="right">测试密码：</td>
         <td align="left">{$testpassword}（可能每日一变，登陆可查）</td>
       </tr>
-      {/if} {/if}
+      {/if} {/if} {/if}
       <input name="id" type="hidden" value="{$name}" />
       {if $paytime != ''}
       <tr>
