--- a/trunk/templates/status.html
+++ b/trunk/templates/status.html
@@ -40,7 +40,7 @@
         <td align="right">◊¢≤· ±º‰£∫</td>
         <td align="left">{$regtime}</td>
       </tr>
-      {if $paytime != ''}
+      {if $paytime == ''}
       {if $testpassword != ''}
       <tr>
         <td align="right">≤‚ ‘’À∫≈£∫</td>
