--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <script src="js/main.js" type="text/javascript"></script>
 
 
-<title>翻墙 SSH代理 VPN代理 网页代理 高速美国主机代理</title>
+<title>出墙 SSH代理 VPN代理 网页代理 高速美国主机代理</title>
 </head>
 <body>
 
