--- a/templates/help.html
+++ b/templates/help.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
 <link href="../css/main.css" type="text/css" rel="stylesheet" />
 <script src="../js/jquery-1.3.2.min.js" type="text/javascript"></script>
-<title>翻墙 SSH代理 VPN代理 网页代理 高速美国主机代理 使用帮助</title>
+<title>出墙 SSH代理 VPN代理 网页代理 高速美国主机代理 使用帮助</title>
 </head>
 <body>
 <div id="status_small" style="display:none">xxx 退出</div>
@@ -13,51 +13,51 @@
 <div id="wrap">
     <div class="Section1">
     <div id="fixed"><a href="../index.php" style="color:#333">返回首页</a></div>
-      <h3>MyEnTunnel+FireFox+FoxyProxy通过帐号翻墙教程</h3>
+      <h3>MyEnTunnel+FireFox+FoxyProxy通过帐号出墙教程</h3>
       <h4>1.安装配置MyEnTunnel：</h4>
       <p class="helpcontent">首先下载<a href="../soft/myentunnel.rar" title="点击下载">MyEnTunnel</a>，解压后，运行myentunnle.exe。填写得到的服务器，用户名称和密码。端口写7070。</p>
-      <p class="helpimg"><img width=474 height=298 id="图片 1" src="../images/翻墙教程img/image001.jpg" alt="myentunnel界面" /></p>
-      <p class="helpcontent">填写好后，点击上图左下角的连接按钮，在弹出的对话框中选YES。连接成功后任务栏的小锁变绿，如图<img width=26 height=27 id="图片 4" src="../images/翻墙教程img/image002.jpg">。这样MyEnTunnel就配置好了。</p>
+      <p class="helpimg"><img width=474 height=298 id="图片 1" src="../images/出墙教程img/image001.jpg" alt="myentunnel界面" /></p>
+      <p class="helpcontent">填写好后，点击上图左下角的连接按钮，在弹出的对话框中选YES。连接成功后任务栏的小锁变绿，如图<img width=26 height=27 id="图片 4" src="../images/出墙教程img/image002.jpg">。这样MyEnTunnel就配置好了。</p>
       <h4>2.安装配置FireFox+FoxyProxy：</h4>
       <p class="helpcontent">从<a href="http://www.mozillaonline.com/" title="点击下载firefox">http://www.mozillaonline.com/</a>上下载最新版FireFox，安装后，再下载<a href="../soft/foxyproxy_basic-1.6.1-fx+sm+tb.xpi" title="点击下载foxproxy">FoxyProxy</a>，把FoxyProxy拖拽到打开的FireFox里面安装。</p>
       <p class="helpcontent">在FireFox下面的状态栏里找到FoxyProxy的狐狸头<img border=0 width=131 height=25 id="图片 7"
-src="../images/翻墙教程img/image003.jpg" alt="foxyproxy在状态的图标">，右键选择“选项”&rarr;“新建代理服务器”如图：</p>
+src="../images/出墙教程img/image003.jpg" alt="foxyproxy在状态的图标">，右键选择“选项”&rarr;“新建代理服务器”如图：</p>
       <p class="helpimg"><img border=0 width=553 height=355 id="图片 10"
-src="../images/翻墙教程img/image004.jpg" alt="foxyproxy界面"></p>
+src="../images/出墙教程img/image004.jpg" alt="foxyproxy界面"></p>
       <p class="helpcontent">按照下图填写和勾选，注意√上SOCKS代理？：</p>
       <p class="helpimg"><img border=0 width=554 height=420 id="图片 13"
-src="../images/翻墙教程img/image005.jpg" alt="填写和勾选foxyproxy中内容"></p>
+src="../images/出墙教程img/image005.jpg" alt="填写和勾选foxyproxy中内容"></p>
       <p class="helpcontent">点击右下角确定后，右键点浏览器状态栏中的foxyproxy，选择刚建的代理</p>
       <p class="helpimg"><img border=0 width=322 height=142 id="图片 19"
-src="../images/翻墙教程img/image006.jpg" alt="右键点浏览器状态栏中的foxyproxy菜单"></p>
+src="../images/出墙教程img/image006.jpg" alt="右键点浏览器状态栏中的foxyproxy菜单"></p>
       <p class="helpcontent">这样就可以了，试试访问<a href="http://twitter.com/">twitter.com</a>吧！</p>
       <p class="helpcontent">如果foxyproxy怎么配置都有问题，可以试试<span style="color:#333; font-weight:bold">&nbsp;autoproxy&nbsp;</span>这个插件，如下图设置</p>
       <p class="helpcontent">设置代理</p>
       <p class="helpimg"><img border=0 width=517 height=355 id="图片 22"
-src="../images/翻墙教程img/image007.jpg" alt="autoproxy设置界面"></p>
+src="../images/出墙教程img/image007.jpg" alt="autoproxy设置界面"></p>
       <p class="helpcontent">设为全局：</p>
       <p class="helpimg"><img border=0 width=435 height=263 id="图片 25"
-src="../images/翻墙教程img/image008.jpg" alt="autoproxy设置界面"></p>
+src="../images/出墙教程img/image008.jpg" alt="autoproxy设置界面"></p>
       <p class="helpcontent">启动全局模式，就可以了。</p>
       <p class="helpimg"><img border=0 width=256 height=198 id="图片 28"
-src="../images/翻墙教程img/image009.jpg" alt="autoproxy设置界面"></p>
+src="../images/出墙教程img/image009.jpg" alt="autoproxy设置界面"></p>
       <h4>3.使用Tunnelier</h4>
       <p class="helpcontent">如果您主要想翻出去看YOUTUBE等对网速要求比较高的网站，建议把MyEntunnel换成<span style="color:#333; font-weight:bold">Tunnelier</span>。速度能快许多。下面是Tunnelier的配置方法。</p>
       <p class="helpcontent">下载<a href="../soft/Tunnelier-Inst.rar" title="点击下载tunnelier">Tunnelier</a>，运行，如下图填写</p>
       <p class="helpimg"><img border=0 width=560 height=560 id="图片 40"
-src="../images/翻墙教程img/image010.jpg" alt="Tunnelier界面"></p>
+src="../images/出墙教程img/image010.jpg" alt="Tunnelier界面"></p>
       
       <p class="helpcontent">第二个Options右边的√都去掉</p>
       <p  class="helpimg"><img border=0 width=554 height=557 id="图片 58"
-src="../images/翻墙教程img/image012.jpg"  alt="Tunnelier界面"></p>
+src="../images/出墙教程img/image012.jpg"  alt="Tunnelier界面"></p>
       <p class="helpcontent" >本地端口写7070</p>
       <p  class="helpimg"><img border=0 width=560 height=560 id="图片 55"
-src="../images/翻墙教程img/image013.jpg" alt="Tunnerlier界面"></p>
+src="../images/出墙教程img/image013.jpg" alt="Tunnerlier界面"></p>
       <p class="helpcontent">点下面的Login就可以了。</p>
-      <p class="helpcontent">如果不想用Firefox想用Chrome翻墙的话，下载Proxy Switchy这款插件，如下图填写就可以了。</p>
+      <p class="helpcontent">如果不想用Firefox想用Chrome出墙的话，下载Proxy Switchy这款插件，如下图填写就可以了。</p>
       <p class="helpimg"><img border=0 width=529 height=524 id="图片 61"
-src="../images/翻墙教程img/image014.jpg" alt="Proxy Switchy界面"></p>
-      <p class="helpcontent">注意一点，如果switchy proxy选择了所有都走这个代理的话，系统的代理也会跟着改变，这样IE也可以翻墙了。</p>
+src="../images/出墙教程img/image014.jpg" alt="Proxy Switchy界面"></p>
+      <p class="helpcontent">注意一点，如果switchy proxy选择了所有都走这个代理的话，系统的代理也会跟着改变，这样IE也可以出墙了。</p>
     </div>
 
 </div>
